--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,4 +3,6 @@ header {
   background-color: #ffffff;
   border: 1px solid #cbcbcb;
   height: 3rem;
+  justify-content: center;
+  align-items: center;
 }
